Bug 45415 - [4.6 Regression] ICE in partition_view_bitmap, at tree-ssa-live.c:334
Summary: [4.6 Regression] ICE in partition_view_bitmap, at tree-ssa-live.c:334
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.6.0
: P1 normal
Target Milestone: 4.6.0
Assignee: Michael Matz
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2010-08-26 12:30 UTC by Richard Biener
Modified: 2010-09-03 14:46 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.5.1
Known to fail:
Last reconfirmed: 2010-09-02 12:58:29


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Biener 2010-08-26 12:30:53 UTC
gcc.c-torture/execute/960416-1.c fails this way with -O1 -fno-tree-dominator-opts, 4.5 is fine.

> /abuild/rguenther/trunk-g/gcc/xgcc -B/abuild/rguenther/trunk-g/gcc/ /space/rguenther/src/svn/trunk/gcc/testsuite/gcc.c-torture/execute/960416-1.c -w -O1 -lm -fno-tree-dominator-opts -o /abuild/rguenther/trunk-g/gcc/testsuite/gcc/960416-1.x1 
/space/rguenther/src/svn/trunk/gcc/testsuite/gcc.c-torture/execute/960416-1.c: In function 'f_le':
/space/rguenther/src/svn/trunk/gcc/testsuite/gcc.c-torture/execute/960416-1.c:48:1: internal compiler error: in partition_view_bitmap, at tree-ssa-live.c:334
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
Comment 1 H.J. Lu 2010-08-26 14:19:59 UTC
It is caused by revision 162413:

http://gcc.gnu.org/ml/gcc-cvs/2010-07/msg00767.html
Comment 2 Richard Biener 2010-08-26 14:21:41 UTC
I'd say it merely exposed it.
Comment 3 Michael Matz 2010-09-02 12:58:29 UTC
Mine.  I'm adding some checking code too.
Comment 4 Michael Matz 2010-09-03 14:43:12 UTC
Subject: Bug 45415

Author: matz
Date: Fri Sep  3 14:42:46 2010
New Revision: 163822

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=163822
Log:
	PR middle-end/45415
	* tree-sra.c (sra_modify_assign): If we modify the statement,
	say so.

	* tree-ssa.c (verify_ssa): Check number of operands and links
	per statement to agree.

testsuite/
	PR middle-end/45415
	* gcc.dg/pr45415.c: New test.

Added:
    trunk/gcc/testsuite/gcc.dg/pr45415.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-sra.c
    trunk/gcc/tree-ssa.c

Comment 5 Michael Matz 2010-09-03 14:46:30 UTC
Fixed.