	PR middle-end/45415 	* tree-sra.c (sra_modify_assign): If we modify the statement, 	say so.

* tree-ssa.c (verify_ssa): Check number of operands and links
	per statement to agree.

testsuite/
	PR middle-end/45415
	* gcc.dg/pr45415.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163822 138bc75d-0d04-0410-961f-82ee72b054a4